# taichi_aot_tutorial

./: CMakeLists.txt  README.md  app.cpp  class.cpp  class.h  main.cpp  test.py
assets/: add_base_c78_0_k0001_vk_0_t00.spv  init_c76_0_k0000_vk_0_t00.spv  metadata.json  metadata.tcb
